src/app/oil/oil.component.scss
.wdiget {
    width: 200px;
    margin-top: 20px;
}

.container {
    display: flex;
    flex-direction: column;
    margin-bottom: 15px;
}

.currency {
    font-size: 24px;
}

.content-color {
    color: rgb(175, 174, 174);
}

